Fix secondary nav vertical alignment

--- a/css/custom-styles/_site-header.scss
+++ b/css/custom-styles/_site-header.scss
@@ -212,7 +212,7 @@ $site-secondary-nav-input-height: 38px;
     flex-direction: row;
     height: units($site-navbar-height);
     margin-top: 0;
-    bottom: px-to-rem(50px);
+    bottom: px-to-rem(46px);
   }
 
   .usa-button {
